# cmps_ts

./: README.md  docker-compose.yml
backend/: pyproject.toml
backend/core/: settings.py  urls.py
backend/user_selection/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/user_selection/management/commands/: __init__.py  create_users.py
