[tool.poetry]
name = "backend"
version = "0.1.0"
description = "тестовое задание"
authors = ["Aleksey <ranangariel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
redis = "^5.0.7"


[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pylint = "^3.2.4"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
